# simple-health

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pull_image.sh
backend/: .gitlab-ci.yml  Dockerfile  README.md  init_dev_db.py  pyproject.toml
backend/api/: config.py  healthcare.db  main.py
backend/api/entities/: general.py  record.py  user.py
backend/api/external_interfaces/: project.py  record_router.py  user_router.py
backend/api/interfaces/: database.py  db_models.py  user_db_handler.py
backend/api/interfaces/db/: database.py  db_models.py  record_db_handler.py  user_db_handler.py
backend/api/use_cases/: project_service.py  record_services.py  user_services.py
backend/tests/: conftest.py  test_routers.py
frontend/: DockerFile  README.md  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
frontend/assets/: health.general.css
frontend/components/: BreadClumbs.vue  Header.vue  Input.vue  InputTextAreaWithValidation.vue  InputTextWithValidation.vue
frontend/interfaces/: file.ts  record.ts  user.ts
frontend/layouts/: default.vue
frontend/locales/: en.js  ja.js
frontend/pages/: index.vue
frontend/pages/records/: _id.vue  create.vue
frontend/pages/user/: signin.vue  signup.vue
frontend/plugins/: axios.ts  datetime.ts  gmap-vue.ts  vee-validate.ts
frontend/store/: api.ts
nginx/: frontend.conf.tmpl
